--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es5",
-    "sourceMap": true
+    "target": "es2015",
+    "sourceMap": true,
+    "outDir": "dist"
   },
+  "include": ["src/**/*"],
   "exclude": [
     "node_modules"
   ]
