--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
   "author": "purelledhand <purelledhand@gmail.com",
   "license": "MIT",
   "scripts": {
-    "start": "tsc-watch --onSuccess \" node dist/index.js\" "
-  },
-  "devDependencies": {
-    "tsc-watch": "^1.0.17"
+    "start": "node index.js",
+    "prestart": "tsc"
   },
   "dependencies": {
-    "crypto-js": "^3.1.9-1"
+    "tsc-watch": "^2.1.2"
   }
 }
