--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "author": "purelledhand <purelledhand@gmail.com",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js",
-    "prestart": "tsc"
+    "start": "tsc-watch --onSuccess \"node dist/index.js\" "
   },
   "dependencies": {
-    "tsc-watch": "^2.1.2"
+    "global": "^4.3.2",
+    "ts-node": "^8.0.2",
+    "tsc-watch": "^2.1.2",
+    "typescript": "^3.3.3333"
   }
 }
