--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,9 @@
     "module": "commonjs",
     "target": "es2015",
     "sourceMap": true,
+    "outDir": "dist"
   },
-  "include": ["index.ts"],
+  "include": ["src/**/*"],
   "exclude": [
     "node_modules"
   ]
